tests/errors/syntax2.lua
-- print(
--     1 + 2*3

-- t = {}
-- t[
--     1
--]

t = {
    [
    'hi' -- ]
-- }
